--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     }
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4",
-    "uuid": "^9.0.0",
-    "cors": "^2.8.5"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "electron": "^22.0.0",
@@ -34,4 +34,3 @@
     "nodemon": "^2.0.20"
   }
 }
-
