--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "lucide": "^0.555.0",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4",
     "uuid": "^10.0.0"
