--- a/web-app/package.json
+++ b/web-app/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js"
+    "dev": "node server.js",
+    "build": "echo 'No build needed - static files'"
   },
   "dependencies": {
     "express": "^4.18.2"
