--- a/web-app/vercel.json
+++ b/web-app/vercel.json
@@ -1,5 +1,8 @@
 {
   "version": 2,
+  "buildCommand": "",
+  "outputDirectory": ".",
+  "installCommand": "echo 'No dependencies needed for static site'",
   "rewrites": [
     {
       "source": "/(.*)",
@@ -17,7 +20,25 @@
       ]
     },
     {
-      "source": "/(.*\\.(js|css|json))",
+      "source": "/*.js",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/*.css",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/*.json",
       "headers": [
         {
           "key": "Cache-Control",
